<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">luckbaby</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="luckybabycenter">好运娃商家中心</string>
    <string name="login_phonenumber">请输入您的手机号码</string>
    <string name="login_password">请输入登陆密码</string>
    <string name="login">登陆</string>
    <string name="login_newszc">新用户注册</string>
    <string name="newregister">新用户注册</string>
    <string name="title_activity_agent_order">AgentOrderActivity</string>

</resources>
