<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#f6f6f6" >
     <ImageView
        android:id="@+id/login_iv1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_centerHorizontal="true"
        android:src="@drawable/dl_03" />

    <TextView
        android:id="@+id/login_luckybabycenter_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/login_iv1"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="22dp"
        android:text="@string/luckybabycenter"
        android:textSize="20sp" />

    <LinearLayout
        android:id="@+id/login_linearLayout1"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:background="@drawable/dl_07"
        android:layout_below="@+id/login_luckybabycenter_tv"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:gravity="center_vertical"
        android:padding="8dp" >

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:src="@drawable/dl_11" />

        <EditText
            android:id="@+id/login_phonenumben_et"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:hint="@string/login_phonenumber"
            android:background="@null" 
            android:inputType="phone"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/login_linearLayout2"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:background="@drawable/dl_07"
        android:layout_below="@+id/login_linearLayout1"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp" 
        android:gravity="center_vertical"
        android:padding="8dp">
        
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:src="@drawable/dl_15" />

        <EditText
            android:id="@+id/login_password_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:background="@null"
            android:hint="@string/login_password" 
            android:inputType="textPassword"/>
    </LinearLayout>

    <Button
        android:id="@+id/login_bt"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:layout_below="@+id/login_linearLayout2"
        android:layout_marginTop="15dp"
        android:layout_centerHorizontal="true"
        android:background="@drawable/button_login_selector"
        android:text="@string/login" />

    <LinearLayout
        android:id="@+id/login_new_zc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/login_bt"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp" >
        
        <TextView
            android:id="@+id/login_new_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:text="@string/login_newszc"
            />
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:src="@drawable/dl_22" />
        
    </LinearLayout>

    <LinearLayout
        android:id="@+id/login_forget"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/login_new_zc"
        android:layout_marginTop="15dp"
        android:layout_centerHorizontal="true" >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:text="忘记密码？"
            />
    </LinearLayout>

</RelativeLayout>